# TEVM

./: .gitignore  ToDoList.todo  pyproject.toml
config/: projects.json
recipe/: example.py  pipx.py  poetry.py
scripts/: tevm.bat
src/tevm/: instance.py  main.py
src/tevm/basic/: __init__.py
src/tevm/basic/func/: __init__.py
src/tevm/cli/: api.py
src/tevm/gui/: __init__.py  api.py
src/tevm/instance/: instance.py
src/tevm/lib/: func.py  json.py
src/tevm/lib/core/: __init__.py  projecter.py  scripter.py
src/tevm/lib/core/reciper/: recipe.py  reciper.py
src/tevm/projecter/: __init__.py  projecter.py
src/tevm/reciper/: __init__.py  devlib.py  reciper.py
src/tevm/scripter/: __init__.py  scripter.py
tests/: CreateTests.py
tools/scripts/: rep.py  tevm-install.py
